[tool.poetry]
name = "openai-queries"
version = "0.1.0"
description = ""
authors = ["Chimik-IT <48414142+Chimik-IT@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
openai = "^1.40.0"
anthropic = "^0.32.0"
langchain-community = "^0.2.11"
openpyxl = "^3.1.5"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
